--- a/.env
+++ b/.env
@@ -10,6 +10,13 @@ DB_NAME= "wrestlingDB"
 DB_TEAMS_COLLECTION= "teams"
 DB_TEAM_MODEL= "Teams"
 
+STATUS_OK= 200
+STATUS_CREATED= 201
+STATUS_NO_CONTENT= 204
+STATUS_NOT_FOUND= 404
+STATUS_BAD_REQUEST= 400
+STATUS_INTERNAL_SERVER_ERROR= 500
+
 SIGUSR2_MESSAGE= "Mongoose disconnected by app start"
 SIGINT_MESSAGE= "Mongoose disconnected by app disconnect"
 SIGTERM_MESSAGE= "Mongoose disconnected by app termination"
